# prashikchat

./: .env.example  Cargo.toml
app/: Cargo.toml
app/src/: app.rs  client.rs  main.rs  mock.rs  panels.rs  widgets.rs
common/: Cargo.toml
common/src/: lib.rs
server/: Cargo.toml
server/src/: db.rs  main.rs
